Update Dockerfile for Ubuntu and component versions